projects.css
/* hero */
section.hero{
    width: 100dvw;
    height: var(--gap-lr);
    /* background-color: var(--light-BG); */
}

/* filter-list */
section.filter-list{
    width: 100dvw;
    min-height: calc(100dvh - 32px);
    height: fit-content;
    padding: 0 0;
    
    display: flex;
    flex-direction: column;
}
section.filter-list .title-text{
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: 1fr;
    column-gap: var(--gap-sm);
}
/* section.filter-list .title-text{
    display: flex;
    justify-content: space-between;
    align-items: end;
    height: fit-content;

    grid-column: 2 / 8;
} */
section.filter-list .controls{
    z-index: 1;
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: 1fr;
    column-gap: var(--gap-sm);
}
section.filter-list .list{
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: 1fr;
    column-gap: var(--gap-sm);
}

section.filter-list .title-text .tt-content{
    grid-column: 2 / 8;
    display: flex;
    justify-content: space-between;
    align-items: end;
}

.controls details,
.list details{
    width: 100%;
    height: fit-content;
    display: flex;
    gap: var(--gap-xsm);
    flex-direction: column;
    grid-column: 2 / 8;
}
.controls details summary{
    width: 100%;
    height: fit-content;
    display: flex;
    gap: var(--gap-xsm);
}
.controls summary::before {
    content: ">";
}
.controls details summary:hover{
    cursor: pointer;
}
.controls details[open] > summary::before {
    transform: rotate(90deg);
}

#myBtnContainer{
    display: flex;
    gap: var(--gap-xsm) var(--gap-md);
    flex-wrap: wrap;
}

section.filter-list .list details summary{
    display: flex;
    justify-content: space-between;
}

section.filter-list .list .container{
    display: flex;
    flex-direction: column;
    grid-column: 2 / 8;
}
section.filter-list .list .container .filterDiv{
    border-top: 2px solid var(--black);
    padding: var(--gap-xsm) 0 var(--gap-sm);
    display: flex;
    justify-content: space-between;
}
section.filter-list .list .container .filterDiv .content{
    display: flex;
    gap: var(--gap-sm);
    width: 100%;
}
section.filter-list .text{
    align-self: flex-end;
    width: 100%;
    max-width: calc(100% - 10em - var(--gap-sm));
}
section.filter-list .text .des{
    display: flex;
    gap: var(--gap-sm);
}

section.filter-list .list .container details .list-details{
    display: flex;
    flex-direction: row;
    overflow-x: scroll;
    max-width: 100%;
    gap: var(--gap-xsm);
}
section.filter-list .list .container .filterDiv .content .thumbnail{
    min-width: 20dvw;
    height: fit-content;
}
section.filter-list .list .container .filterDiv .content .thumbnail img{
    width: 100%;
    height: 100%;
    overflow: hidden;
    object-position: center;
    object-fit: cover;
}

/* filter buttons */
.filterDiv {
    display: none; 
}
.show {
    display: block;
}

button{
    padding: 0;
    border: 0;
    background: none;
    color: var(--hover-C);
}
button:hover{
    cursor: pointer;
}

.container {
    overflow: hidden;
}

/* scaling */
/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
    section.filter-list{
        width: 100dvw;
        min-height: calc(100dvh - 32px);
        height: fit-content;
        padding: 0 var(--gap-sm);
    
        display: flex;
        flex-direction: column;
        gap: var(--gap-sm);
    }

    section.filter-list .list .container .filterDiv .content .thumbnail{
        min-width: 40%;
    }

    section.filter-list .controls .control-buttons{
        justify-content: space-between;
    }
    
    section.filter-list .list .container .filterDiv .content{
        flex-direction: row;
    }
    section.filter-list .list .container .filterDiv .content .text{
        max-width: 100%;
    }
    section.filter-list .text .des{
        display: flex;
        gap: var(--gap-xsm) var(--gap-sm);
        flex-wrap: wrap;
    }
}

